styles: Fix inconsistent margin in definition lists
Remove extra margin when a <dd> tag contains a <p> tag.

Bug: T357168

--- a/static/styles/elements.css
+++ b/static/styles/elements.css
@@ -182,6 +182,10 @@ pre {
 	word-wrap: break-word;
 }
 
+dd > p:first-child {
+	margin: 0;
+}
+
 /* Support Blink based browsers. */
 /* They use `outline` for focus styles, we're only amending the color here, see T245887. */
 :focus {
